--- a/app/templates/home/password_items_list.html
+++ b/app/templates/home/password_items_list.html
@@ -1,3 +1,6 @@
 {% for item in passwords %}
+  {% set number = loop.index %}
   {% include 'home/password_item.html' %}
 {% endfor %}
+
+ <script type='module' src="{{url_for('static', filename='js/home/utils/passwordVisibility.js')}}"></script>
