--- a/app/templates/auth/login/login.html
+++ b/app/templates/auth/login/login.html
@@ -44,10 +44,10 @@
     rounded-xl transition duration-200") }}
 
     <div class="mt-4 text-center">
-      <a href="{{ url_for('auth.forgot_password') }}" class="text-blue-400 hover:underline transition duration-200"
+      {# <a href="{{ url_for('auth.forgot_password') }}" class="text-blue-400 hover:underline transition duration-200"
         >Forgot Password?</a
-      >
-      <span class="text-gray-400 mx-2">|</span>
+      > #}
+      {# <span class="text-gray-400 mx-2">|</span> #}
       <a
         href="{{ url_for('auth.register') }}"
         class="text-blue-400 hover:underline transition duration-200"
