--- a/app/templates/home/create_password/create_password.html
+++ b/app/templates/home/create_password/create_password.html
@@ -66,24 +66,5 @@
     </div>
   </form>
 </div>
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    document.querySelectorAll(".toggle-password-btn").forEach(function (btn) {
-      btn.addEventListener("click", function (e) {
-        e.preventDefault();
-        const targetId = btn.dataset.target || "password-field";
-        const pwd = document.getElementById(targetId);
-        if (pwd) {
-          if (pwd.type === "password") {
-            pwd.type = "text";
-            btn.textContent = "🔒";
-          } else {
-            pwd.type = "password";
-            btn.textContent = "👁";
-          }
-        }
-      });
-    });
-  });
-</script>
+ <script type='module' src="{{url_for('static', filename='js/home/utils/passwordVisibility.js')}}"></script>
 {% endblock %}
