--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -5,15 +5,15 @@
       <input type="text" id="search" placeholder="Search passwords..."
         class="flex-grow p-2 bg-gray-700 border border-gray-600 rounded-2xl text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
         autocomplete="off" />
-      <form method="POST">
-        {{ add_form.hidden_tag() }} {{ add_form.submit_add(class="p-2 px-5
-        bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition
-        duration-200 w-full sm:w-auto") }}
-      </form>
+      <a href="{{ url_for('home.create_password') }}"
+        class="inline-block p-2 px-5 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition duration-200 w-full sm:w-auto">
+        New
+      </a>
+
     </div>
     <div id="passwords-list" class="flex flex-col gap-2 overflow-y-auto">
-      {% for item in passwords %} {% include 'home/password_item.html' %} {%
-      endfor %}
+      {% set passwords_local = passwords %}
+      {% include 'home/password_items_list.html' %}
     </div>
     <div class="fixed left-0 bottom-0 w-full flex justify-center z-50" id="delete-selected-btn">
       <div class="w-full px-4 pb-4 max-w-3xl mx-auto flex justify-center">
@@ -25,6 +25,6 @@
       </div>
     </div>
   </div>
-  <script src="{{url_for('static', filename='js/home/home.js')}}"></script>
+  <script type='module' src="{{url_for('static', filename='js/home/init.js')}}"></script>
 </div>
 {% endblock %}
