--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -7,7 +7,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body>
+  <body class="bg-gray-900">
     <div class="flex flex-col h-screen">
       {% include 'main/header.html' %}
       {% block content %} {% endblock %}
