--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -4,7 +4,6 @@
 <div class="flex flex-col items-center justify-start min-h-screen bg-gray-900 pt-24 px-4">
     <div class="bg-gray-800 p-10 rounded-2xl shadow-2xl w-full max-w-xl">
 
-        <!-- 🔐 Информация о пользователе -->
         <div class="mb-8 pb-6 border-b border-gray-700">
             <h2 class="text-4xl font-bold text-white mb-2">{{ current_user.username }}</h2>
             <h1 class="text-4xl  text-white mb-2">{{ current_user.email }}</h1>
@@ -12,32 +11,27 @@
                 Number of passwords: 
                 <span class="font-semibold text-blue-400">{{ password_count }}</span>
             </p>
-            <div class="mt-4">
+            {# <div class="mt-4">
                 <a href="{{ url_for('auth.forgot_password') }}">
                     <button class="px-4 py-2 bg-red-600 hover:bg-red-700 text-white rounded-lg text-sm font-medium transition">
                         🔑 Change Password
                     </button>
                 </a>
-            </div>
+            </div> #}
         </div>
 
-        <!-- 📦 Блок кнопок -->
         <div class="flex flex-col space-y-4">
-            <!-- Export CSV -->
             <a href="{{ url_for('home.export_csv') }}">
                 <button
                     class="w-full px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white rounded-xl text-lg font-semibold transition shadow-md">
                     📤 Export CSV
                 </button>
             </a>
-
-            <!-- Import CSV: триггер кнопка -->
             <button onclick="toggleImportForm()"
                 class="w-full px-6 py-3 bg-green-600 hover:bg-green-700 text-white rounded-xl text-lg font-semibold transition shadow-md">
                 📥 Import CSV
             </button>
 
-            <!-- Скрытая форма импорта -->
             <form id="importForm" action="{{ url_for('home.import_csv') }}" method="post"
                 enctype="multipart/form-data" class="w-full hidden mt-2">
                 <label class="block w-full mb-2">
@@ -50,7 +44,6 @@
                 </button>
             </form>
 
-            <!-- Password Test -->
             <a href="{{ url_for('home.password_test') }}">
                 <button
                     class="w-full px-6 py-3 bg-yellow-400 hover:bg-yellow-500 text-black rounded-xl text-lg font-semibold transition shadow-md">
@@ -58,7 +51,7 @@
                 </button>
             </a>
 
-            <!-- Home -->
+
             <a href="{{ url_for('home.index') }}">
                 <button
                     class="w-full px-6 py-3 bg-gray-700 hover:bg-gray-600 text-white rounded-xl text-lg font-semibold transition shadow-md">
@@ -69,7 +62,6 @@
     </div>
 </div>
 
-<!-- 💡 Скрипт для показа/скрытия формы импорта -->
 <script>
     function toggleImportForm() {
         const form = document.getElementById('importForm');
