--- a/app/templates/welcome/welcome.html
+++ b/app/templates/welcome/welcome.html
@@ -9,7 +9,7 @@
     <div class="text-left">
     <h1 class="text-5xl font-bold text-white mb-4 drop-shadow-lg">Welcome!</h1>
       <p class="text-gray-100 text-lg mb-8 drop-shadow-lg max-w-xl">
-        Welcome to PassManager — your secure and simple password manager.<br>
+        Welcome to Password Manager — your secure and simple password manager.<br>
         Store, manage, and protect your passwords with ease.
       </p>
     </div>
